<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FirstTimeLoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/looks_like_you_are_here_for_the_first_time"
        android:textColor="#B6B6B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/let_s_setup_your_username"
        android:textColor="#B6B6B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameContainer"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"

        android:layout_marginRight="30dp"
        android:textColorHint="#B6B6B6"
        app:hintTextColor="#B6B6B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:met_floatingLabel="normal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/your_username_here"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColor="#B6B6B6"
            android:textColorHint="#B6B6B6"
            app:met_floatingLabel="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>